--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Umbrella</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 </head>
 
 <body>
@@ -43,6 +45,6 @@
     </footer>
 
     <script src="main.js"></script>
-</body>
+    </body>
 
 </html>
